# pwn2report

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-pandoc.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/cwe/: cwe-names.json
src-tauri/resources/kb/: catalog.json
src-tauri/resources/pandoc/: reference.docx
src-tauri/resources/typst/lib/: common.typ
src-tauri/resources/typst/themes/: code_audit.typ  red_team.typ  web_pentest.typ
src-tauri/src/: e2e_tests.rs  error.rs  lib.rs  main.rs  state.rs  test_fixtures.rs
src-tauri/src/ai/: config.rs  keychain.rs  mod.rs
src-tauri/src/commands/: ai.rs  assets.rs  evidence.rs  export.rs  findings.rs  import.rs  kb.rs  mod.rs  reports.rs  scope.rs  sync.rs  templates.rs  vault.rs
src-tauri/src/db/: assets.rs  evidence.rs  findings.rs  kb.rs  mod.rs  reports.rs  scope.rs
src-tauri/src/import/: burp.rs  csv.rs  mod.rs  nessus.rs  nuclei.rs  sarif.rs  secai.rs  zap.rs
src-tauri/src/models/: asset.rs  evidence_image.rs  finding.rs  kb.rs  mod.rs  report.rs  scope.rs
src-tauri/src/render/: content_model.rs  csv.rs  cvss.rs  docx.rs  html.rs  labels.rs  markdown.rs  markup.rs  mod.rs  sarif.rs  typst_pdf.rs
src-tauri/src/sync/: bundle.rs  crypto.rs  merge.rs  mod.rs
src-tauri/src/vault/: connection.rs  keychain.rs  mod.rs  schema.rs
src-tauri/tests/: smoke.rs
src/app/: app-shell.tsx  globals.css
src/app/routes/: kb.tsx  report-detail.tsx  reports-list.tsx  settings.tsx  vault-gate.tsx
src/components/: cvss-calculator.test.ts  cvss-calculator.tsx  cvss-vector.tsx  empty-state.tsx  error-boundary.tsx  export-menu.tsx  language-toggle.tsx  report-language-select.tsx  report-type-badge.tsx  severity-badge.tsx  theme-toggle.tsx
src/components/ai/: ai-assist-button.tsx
src/components/evidence/: annotator.tsx  evidence-gallery.tsx  evidence-thumbnail.tsx
src/components/findings/: finding-assets-field.tsx  finding-card.tsx  finding-form-state.test.ts  kb-picker.tsx  (+5 more)
src/i18n/: index.ts
src/lib/: finding-draft.test.ts  finding-draft.ts  finding-validation.test.ts  finding-validation.ts  format.test.ts  format.ts  image.test.ts  image.ts  import-sniff.test.ts  import-sniff.ts  ipc.test.ts  ipc.ts  page-motion.ts  types.ts  use-debounced-callback.test.tsx  use-debounced-callback.ts  use-hotkeys.test.ts  use-hotkeys.ts  use-idle-lock.test.ts  use-idle-lock.ts  use-onboarding.ts  use-theme.ts  use-undoable-delete.ts
(+35 files in other folders)
