[package]
name = "pwn2report"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pwn2report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher", "backup"] }
keyring = "3"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
argon2 = "0.5.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst = "0.14"
typst-pdf = "0.14"
derive_typst_intoval = "0.6.0"
time = "=0.3.47"
roxmltree = "0.21.1"

